--- a/sales.html
+++ b/sales.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div id ="container"></div>
 
 
     <script src="js/app.js"></script>
