--- a/sales.html
+++ b/sales.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <div id ="container"></div>
-
+     
+    <a  href="index.html" target="_blank">Our Home page</a>
 
     <script src="js/app.js"></script>
 </body>
