--- a/sales.html
+++ b/sales.html
@@ -5,10 +5,33 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id ="container"></div>
-     
-    <a  href="index.html" target="_blank">Our Home page</a>
 
+<form id="cookiesform">
+<fieldset>
+    <legend>New Branch Information</legend>
+    <label for="nameBranch">name of branch
+        <input type="text" id="name" required>
+    </label>
+    <br>
+    <label for="minofCust">min of customer 
+        <input type="text" id="minCust"required >
+    </label>
+    <br>
+    <label for="maxofCust">max of customer 
+        <input type="text" id="maxCust" required>
+    </label>
+    <br>
+    <label for="avgofCookie">avg of cookies
+        <input type="text" id="avgCookie" required>
+    </label>
+    <br>
+
+    <input type="submit" id="submit">
+</fieldset>
+</form>
+
+    <div id ="container"></div>
+    <a  href="index.html" target="_blank">Our Home page</a>
     <script src="js/app.js"></script>
 </body>
 </html>
