adding style sales page

--- a/index.html
+++ b/index.html
@@ -66,15 +66,14 @@
                 width="200" height="150" frameborder="0" style="border:black solid 2px;" allowfullscreen=""></iframe>
 
         </section>
-
         <div id="contact">
             <h3>Contact Us</h3>
             <br>
             <form class="form">
-                <input type="text" placeholder="Your name" required><br>
-                <input type="email" placeholder="Your email" required><br>
+                <input class="input" type="text" placeholder="Your name" required><br>
+                <input class="input" type="email" placeholder="Your email" required><br>
                 <textarea class="form-control" placeholder="Your message..."></textarea><br>
-                <input type="submit" value="send">
+                <input class="input"type="submit" value="send">
             </form>
         </div>
 
