--- a/sales.html
+++ b/sales.html
@@ -17,28 +17,27 @@
         </nav>
 
     </header>
+    <img class="comming-soon"src="img/comming soon.gif">
 <form id="cookiesform">
-<fieldset>
-    <legend>New Branch Information</legend>
-    <label for="nameBranch">name of branch
+
+    <label for="nameBranch">Name of branch
         <input type="text" id="name" required>
     </label>
     <br>
-    <label for="minofCust">min of customer 
+    <label for="minofCust">Min of customer 
         <input type="text" id="minCust"required >
     </label>
     <br>
-    <label for="maxofCust">max of customer 
+    <label for="maxofCust">Max of customer 
         <input type="text" id="maxCust" required>
     </label>
     <br>
-    <label for="avgofCookie">avg of cookies
+    <label for="avgofCookie">Avg of cookies
         <input type="text" id="avgCookie" required>
     </label>
     <br>
 
     <input type="submit" id="submit">
-</fieldset>
 </form>
 
     <div id ="container"></div>
